tests/cases/loops/errors/err_for_var_does_not_leak.aipl
fn main() -> i64 {
    for (let c : "x") { }
    c
}
--- errors ---
error: unknown identifier "c"
 --> input:3:5
  |
3 |     c
  |     ^
